--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.defer-datasource-initialization = true
 spring.datasource.url=jdbc:postgresql://localhost:5432/todo
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=654321
+#spring.datasource.password=654321
 
 # JPA config
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
